Fix clickable buttons behind a div

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,8 +66,9 @@ button {
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: -1;
+    z-index: 5;
     opacity: 0;
+    display: none;
 }
 
 .top-container.fade-in {
